# shakespearean_pokemon

./: Dockerfile  README.md  pyproject.toml
shakespearean_pokemon/: __init__.py  cache.py  exceptions.py  pokemon.py  translate.py
tests/: conftest.py  pokeapi.json  test_api.py  test_pokemon.py  test_translate.py  translate.json
