[tool.poetry]
name = "shakespearean_pokemon"
version = "0.1.0"
description = "HTTP API to get shakespearean pokemon descriptions"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-mock = "^3.1.0"
requests-mock = "^1.8.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
